<resources>
    <string name="app_name">Tabata</string>

    <string name="addTimerDesc">Add Timer</string>
    <string name="clearDesc">Clear Timers</string>
    <string name="saveTimerDesc">Save Timer</string>
    <string name="cancelDesc">Cancel</string>
    <string name="nameTint">Name</string>
    <string name="editDesc">Edit</string>
    <string name="deleteDesc">Delete</string>
    <string name="nameHint">Timer name</string>

    <string name="warm_up">Warm up</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="cooldown">Cooldown</string>
    <string name="repeats">Repeats</string>
    <string name="cycles">Cycles</string>
    <string name="color">Color</string>

    <string name="complete">Complete</string>

    <string name="title_activity_settings">Settings</string>
    <string name="appearance_header">Appearance</string>
    <string name="lang_header">Language</string>

    <string name="theme_title">Dark theme</string>
    <string name="text_size_title">Text size</string>

    <string name="lang_title">Language</string>
    <string name="lang_action_title">Choose language</string>


    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>

    <string name="small" translatable="false">small</string>
    <string name="medium" translatable="false">medium</string>
    <string name="large" translatable="false">large</string>

    <string name="russian">Russian</string>
    <string name="english">English</string>

    <string name="ru" translatable="false">ru</string>
    <string name="eng" translatable="false">eng</string>

    <string name="settings_item">Settings</string>
</resources>