<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TimerEditFragment"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/timer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:maxLength="20"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:focusableInTouchMode="false"
        android:isScrollContainer="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_title"
        app:layout_constraintVertical_bias="0.13999999">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edit_row_margin_btm">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:textColor="@color/textColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/warm_up" />

            <EditText
                android:id="@+id/warm_up_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/textColor"
                android:text="00"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:text=":" />

            <EditText
                android:id="@+id/warm_up_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/textColor"
                android:text="10"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:layout_width="0dp"
                android:textColor="@color/textColor"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/work" />

            <EditText
                android:id="@+id/work_min"
                android:layout_width="0dp"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="2"
                android:text="00"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/work_s"
                android:layout_width="0dp"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="2"
                android:text="10"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edit_row_margin_btm">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text="@string/rest" />

            <EditText
                android:id="@+id/rest_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:maxLength="2"
                android:text="00"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text=":" />

            <EditText
                android:id="@+id/rest_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/textColor"
                android:text="10"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edit_row_margin_btm">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text="@string/repeats" />

            <EditText
                android:id="@+id/repeats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:maxLength="1"
                android:text="1"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edit_row_margin_btm">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text="@string/cycles" />

            <EditText
                android:id="@+id/cycles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:maxLength="2"
                android:text="1"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edit_row_margin_btm">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:text="@string/cooldown" />

            <EditText
                android:id="@+id/cooldown_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:maxLength="2"
                android:text="00"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:text=":" />

            <EditText
                android:id="@+id/cooldown_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/textColor"
                android:inputType="number"
                android:maxLength="2"
                android:text="10"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edit_row_margin_btm">

            <TextView
                android:textSize="@dimen/edit_text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:text="@string/color"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/select_color"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:background="@color/black"
                    android:shadowRadius="50" />
            </LinearLayout>

        </TableRow>



    </TableLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveTimerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonColor"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cancelDesc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonColor"
        android:contentDescription="@string/cancelDesc"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>